[package]
name = "eva"
version = "0.3.0-alpha.1"
authors = ["NerdyPepper <akshayoppiliappan@gmail.com>"]
edition = "2021"
description = "Calculator REPL similar to bc(1)"
homepage = "https://github.com/nerdypepper/eva"
repository = "https://github.com/nerdypepper/eva"
readme = "./readme.md"
keywords = ["calculator", "repl", "math", "cli", "bc"]
categories = ["command-line-interface", "science", "parser-implementations"]
license = "MIT"

[dependencies]
rustyline   = { version = "9.1.2", default-features = false }
clap        = { version = "3.2.6", features = ["cargo"] }
directories = "4.0.1"
regex       = "1.5.6"
num         = "0.4.0"
term_size   = "0.3.2"
once_cell   = "1.12.0"
