[package]
name = "eva"
version = "0.3.1"
authors = ["NerdyPepper <akshayoppiliappan@gmail.com>"]
edition = "2021"
description = "Calculator REPL similar to bc(1)"
homepage = "https://github.com/nerdypepper/eva"
repository = "https://github.com/nerdypepper/eva"
readme = "./readme.md"
keywords = ["calculator", "repl", "math", "cli", "bc"]
categories = ["command-line-interface", "science", "parser-implementations"]
license = "MIT"

[dependencies]
clap = { version = "4.0.18", features = ["cargo"], optional = true }
directories = { version = "5.0.1", optional = true }
num = "0.4.0"
once_cell = "1.12.0"
regex = "1.5.6"
rustyline = { version = "13.0.0", default-features = false, optional = true }
terminal_size = "0.3.0"

# TODO move this into a crate instead of requiring a feature
[features]
build-binary = ["clap", "directories", "rustyline"]

[lib]
name = "eva"
path = "src/lib.rs"

[[bin]]
name = "eva"
required-features = ["build-binary"]
